<resources>
    <string name="app_name">Solo-android-sdk-example</string>
    <string name="monitoring">Monitoring</string>
    <string name="record_camera">Record_camera</string>
    <string name="checkup">Checkup</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="send_metadata">send metadata</string>
    <string name="show_monitoring_result">show monitoring result</string>
    <string name="record">record</string>
    <string name="save">save</string>
    <string name="loading">Loading...</string>
    <string name="monitoring_is_ready">Monitoring is ready</string>
    <string name="record_started">Record started</string>
    <string name="save_video">Save video</string>
    <string name="solo_initialized">Solo initialized!</string>
    <string name="camera_or_record_audio_permission_is_not_granted">Camera or Record Audio permission is not granted!</string>
    <string name="monitoring_result">Monitoring Tracker</string>
</resources>