<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <Button
        android:id="@+id/btn_checkup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkup"
        app:layout_constraintBottom_toTopOf="@id/btn_monitoring"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_monitoring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monitoring"
        app:layout_constraintBottom_toTopOf="@id/btn_record_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_checkup" />


    <Button
        android:id="@+id/btn_record_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record_camera"
        app:layout_constraintBottom_toTopOf="@id/message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_monitoring" />

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>